crud-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mpadilla
  labels:
    tipo: crud-php-mysql
