mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    app: webapp
    tier: backend
  ports:
  - protocol: "TCP"
    port: 3306
    targetPort: 3306
  clusterIP: None
